--- a/_posts/2021-02-03-wadachi.md
+++ b/_posts/2021-02-03-wadachi.md
@@ -4,7 +4,7 @@ author: kanta
 category: works
 ---
 Wadachiは調べ物の過程を記録・共有するための, いわば読書のレシピサイト。  
-他のがどんな本をどの順番で見たのかを知ることによって, 自身のリサーチや学習に役立てることもできます。  
+他の人がどんな本をどの順番で見たのかを知ることによって, 自身のリサーチや学習に役立てることもできます。  
 個人的な読書記録としても使うことができます。
 
 Demo URL: 
